tests/ui/const-generics/fn-const-param-infer.adt_const_params.stderr
error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-infer.rs:8:25
   |
LL | struct Checked<const F: fn(usize) -> bool>;
   |                         ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/fn-const-param-infer.rs:33:25
   |
LL |     let _ = Checked::<{ generic_arg::<u32> }>;
   |                         ^^^^^^^^^^^^^^^^^^ expected fn pointer, found fn item
   |
   = note: expected fn pointer `fn(usize) -> _`
                 found fn item `fn(u32) -> _ {generic_arg::<u32>}`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0741.
For more information about an error, try `rustc --explain E0308`.
